crates/ic-hir/tests/snapshots/module_name_conflicts__module_interface_name_conflict.snap
---
source: crates/ic-hir/tests/module_name_conflicts.rs
expression: diagnostics
---
error: duplicate definition of `foo`
   ┌ test.idl:2:16
   │
 2 │         module foo {};
   ·                ^^^ originally defined here
 3 │         interface foo {};
   ·                   ^^^ redefined here
   └──
