crates/ic-hir/tests/snapshots/module_name_conflicts__module_struct_name_conflict.snap
---
source: crates/ic-hir/tests/module_name_conflicts.rs
expression: diagnostics
---
⨯: duplicate definition of `foo`
  @ test.idl:2:16

 2 │ module foo {};
   │        ˆˆˆ originally defined here
 3 │ struct foo {};
   │        ˆˆˆ redefined here
