crates/ic-hir/tests/snapshots/module_name_conflicts__struct_module_name_conflict.snap
---
source: crates/ic-hir/tests/module_name_conflicts.rs
expression: diagnostics
---
error: duplicate definition of `foo`
   ┌ test.idl:2:16
   │
 2 │         struct foo {};
   ·                ^^^ originally defined here
 3 │         module foo {};
   ·                ^^^ redefined here
   └──
